--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <h1>Reserva de Meseros</h1>
 
     <button id="menu-toggle" class="hamburguesa ">
-
-      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 100 80" fill="#333">
-        <rect width="100" height="15"></rect>
-        <rect y="30" width="100" height="15"></rect>
-        <rect y="60" width="100" height="15"></rect>
-      </svg>
-      
+      <img src="https://www.svgrepo.com/show/312300/hamburger-menu.svg" alt="Icono de menú hamburguesa" width="30" height="30">
     </button>
 
     <!-- Menu Principal -->
@@ -64,7 +58,7 @@
     <!-- Sección Contacto -->
     <section id="contacto" class="seccion">
       <h2>Contacto</h2>
-      <p>Escríbenos por WhatsApp: 
+      <p>Escríbenos por WhatsApp para mas Informacion: 
         <a href="https://wa.me/573145007411" target="_blank">Click aquí</a>
       </p>
     </section>
