mejora para modal index.html

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             <th>Nombre</th>
             <th>Teléfono</th>
             <th>Estado</th>
+            <th>Acciones</th>
           </tr>
         </thead>
         <tbody id="lista-meseros"></tbody>
@@ -161,10 +162,11 @@
       
     </section>
 
+    <!-- ====== Modal Asignar Reserva a Mesero ====== -->
     <div id="modal-asignar" class="modal">
       <div class="modal-contenido">
-        <h3>Asignar Mesero</h3>
-        <select id="select-mesero"></select>
+        <h3>Asignar Mesero a Reserva</h3>
+        <select id="select-reserva"></select>
         <div class="modal-botones">
           <button id="btn-confirmar" class="btn">Confirmar</button>
           <button id="btn-cancelar" class="btn-cancelar">Cancelar</button>
