--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
             <th>Nombre</th>
             <th>Teléfono</th>
             <th>Estado</th>
-            <th>Acciones</th>
           </tr>
         </thead>
         <tbody id="lista-meseros"></tbody>
@@ -162,17 +161,29 @@
       
     </section>
 
-    <!-- ====== Modal Asignar Reserva a Mesero ====== -->
-    <div id="modal-asignar" class="modal">
+    <!-- ====== Modal Asignar Reserva a Meseros ====== -->
+    <div id="modal-asignar" class="modal" >
       <div class="modal-contenido">
         <h3>Asignar Mesero a Reserva</h3>
-        <select id="select-reserva"></select>
+        <select id="select-mesero"></select>
         <div class="modal-botones">
           <button id="btn-confirmar" class="btn">Confirmar</button>
           <button id="btn-cancelar" class="btn-cancelar">Cancelar</button>
         </div>
       </div>
     </div>
+
+    <!-- ====== Modal Detalle de Reservas ====== -->
+    <div id="modal-detalle" class="modal" >
+      <div class="modal-contenido">
+        <h3>Detalle de Reserva</h3>
+        <div id="detalle-contenido"></div>
+        <div class="modal-botones">
+          <button id="btn-cerrar-detalle" class="btn-cancelar">Cerrar</button>
+        </div>
+      </div>
+    </div>
+
 
   </main>
   
